removed the collection param
